--- a/index.html
+++ b/index.html
@@ -67,20 +67,41 @@
                             </button>
                         </div>
                         <ul class="menu-section">
-                            <li class="menu-item active">
+                            <li class="menu-item order-1 active">
                                 <a href="#">How It Works</a>
                                 <div class="indicator"></div>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item order-1">
                                 <a href="#">Rewards</a>
                                 <div class="indicator"></div>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item order-1">
                                 <a href="#">Guidelines</a>
                                 <div class="indicator"></div>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item order-1">
                                 <a href="#">About Us</a>
+                                <div class="indicator"></div>
+                            </li>
+                            <li class="menu-item order-2 start">
+                                <a href="#">
+                                    <img src="assets/images/avatarFemale.svg" alt="avatar" class="rounded-circle mb-1" height="28" loading="lazy" />
+                                    <span>Profile</span>
+                                </a>
+                                <div class="indicator"></div>
+                            </li>
+                            <li class="menu-item order-2">
+                                <a href="#">
+                                    <i data-feather="globe"></i>
+                                    <span>Translate</span>
+                                </a>
+                                <div class="indicator"></div>
+                            </li>
+                            <li class="menu-item order-2">
+                                <a href="#">
+                                    <i data-feather="sun"></i>
+                                    <span>Switch Theme</span>
+                                </a>
                                 <div class="indicator"></div>
                             </li>
                         </ul>
@@ -88,8 +109,12 @@
                 </div>
 
                 <div class="nav-item-right">
-                    <a href="#" class="menu-icon"><i data-feather="globe"></i></a>
-                    <a href="#" class="menu-icon"><i data-feather="sun"></i></a>
+                    <a href="#" class="menu-icon">
+                        <i data-feather="globe"></i>
+                    </a>
+                    <a href="#" class="menu-icon">
+                        <i data-feather="sun"></i>
+                    </a>
                     <a href="#" class="menu-icon">
                         <img src="assets/images/avatarFemale.svg" alt="avatar" class="rounded-circle mb-1" height="28" loading="lazy" />
                     </a>
