nav test 3 retry 2

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <div class="menu" id="navMenu">
                         <div class="menu-mobile-nav">
                             <div class="menu-mobile-title">
-                                <img src="assets/images/logo.png" alt="Logo" height="24" alt="LFD Logo" loading="lazy" />
-                                <span>ECOH PLATFORM</span>
+                                <!-- <img src="assets/images/logo.png" alt="Logo" height="24" alt="LFD Logo" loading="lazy" />
+                                <span>ECOH PLATFORM</span> -->
+                                <button type="button" class="menu-mobile-signup">Signin</button>
                             </div>
                             <button type="button" class="menu-mobile-close">
                                 <i data-feather="x"></i>
@@ -84,13 +85,6 @@
                                 <div class="indicator"></div>
                             </li>
                             <li class="menu-item order-2 start">
-                                <a href="#">
-                                    <img src="assets/images/avatarFemale.svg" alt="avatar" class="rounded-circle mb-1" height="28" loading="lazy" />
-                                    <span>Profile</span>
-                                </a>
-                                <div class="indicator"></div>
-                            </li>
-                            <li class="menu-item order-2">
                                 <a href="#">
                                     <i data-feather="globe"></i>
                                     <span>Translate</span>
