--- a/index.html
+++ b/index.html
@@ -122,6 +122,138 @@
             </section>
         </div>
     </nav>
+
+    <!-- ep-main-content -->
+    <main class="ep-main-content">
+        <div class="section" id="ep-landing">
+            <div class="ep-text-content">
+                <p>Welcome to the Ecoh Platform Referral Program!</p>
+                <!-- <p>Invite a friend to Ecoh Platform and get rewarded. </p> -->
+                <div class="ep-reward-container container">
+                    <p>If you invite friends who all make full payments on Living Food & Drink (LFD) Services, you can get up to</p>
+                    <p class="ep-reward">154,710,000 FCFA</p>
+                    <p>as reward in your ECOH personal savings account (PIP)!</p>
+                </div>
+                <button class="ep-login">View your referrals</button>
+                <a href="#0" class="ep-terms-link">Terms and Conditions</a>
+            </div>
+            <div class="ep-img-content">
+                <img src="/assets/images/img-1.png" alt="Happy woman">
+            </div>
+        </div>
+        <div class="section" id="ep-rewards" data-title="Rewards">
+            <h1 class="ep-section-heading">Rewards</h1>
+            <div class="d-flex carousel-nav">
+                <a href="#" class="col active">Associate</a>
+                <a href="#" class="col">Excellent Team Coach (ETC)</a>
+            </div>
+            <div class="owl-carousel owl-1">
+                <div class="item-1 w-100">
+                    <p class="phase-desc">Phase I of the ECOH platform referral program.</p>
+                    <table class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Level</th>
+                                <th scope="col">Number of Referrals</th>
+                                <th scope="col">NBR (Net Renewed Balance) / FCFA</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1st Tier</th>
+                                <td>5</td>
+                                <td>35,000</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2nd Tier</th>
+                                <td>25</td>
+                                <td>225,000</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3rd Tier</th>
+                                <td>125</td>
+                                <td>825,000</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4th Tier</th>
+                                <td>625</td>
+                                <td>5.625,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p class="ep-cnr-text">TOTAL ‘Cumulative Net Reward-(CNR)’ Balance = <span>6,710,000 FCFA</span></p>
+                </div>
+
+                <div class="item-2 w-100">
+                    <p class="phase-desc">Phase II of the ECOH platform referral program.</p>
+                    <table class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Level</th>
+                                <th scope="col">Pre-requisites</th>
+                                <th scope="col">Deadline</th>
+                                <th scope="col">NBR / FCFA</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Simple</th>
+                                <td>5 TCs with at least 625 new associates each.</td>
+                                <td>10-16 months</td>
+                                <td>13.5 Million</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Super</th>
+                                <td>25 TCs with at least 625 new associates each.</td>
+                                <td>14-20 months</td>
+                                <td>22.5 Million</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Supreme</th>
+                                <td>125 Team Captains, via (5+25) Coaches, to each Attain 625 New Associates!</td>
+                                <td>18-24 months</td>
+                                <td>112.5 Million</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p class="ep-cnr-text">TOTAL (CNR) Balance = Phase1 CNR (6,710,000 FCFA) + Phase II CNR (148,500,000 FCFA) = <span>154,710,000 FCFA</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="ep-how-it-works" data-title="How It Works">
+            <h1 class="ep-section-heading">How It Works</h1>
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="ep-pre-requisites" data-title="Pre-requisites">
+            <h1 class="ep-section-heading">Pre-requisites to Enjoy Rewards</h1>
+        </div>
+
+    </main>
     <script>
         feather.replace()
     </script>
