how it works web

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <!-- css styles start -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/magaNav/reset.min.css">
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/style.css">
@@ -147,7 +149,7 @@
 
     <!-- ep-main-content -->
     <main class="ep-main-content">
-        <div class="section" id="ep-landing">
+        <div class="section" id="ep-header">
             <div class="ep-container ep-text-content">
                 <div class="ep-reward-con">
                     <p>Invite friends to Living Food & Drink (LFD) Services and stand a chance to get rewards as big as</p>
@@ -158,6 +160,45 @@
             </div>
             <div class="ep-img-content">
                 <img src="/assets/images/img-1.png" alt="Happy woman">
+            </div>
+        </div>
+        <div class="section" id="ep-how-it-works" data-title="How It Works">
+            <div class="ep-container">
+                <h1 class="ep-section-heading">How It Works</h1>
+                <div class="card-deck">
+                    <div class="card">
+                        <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+                        <div class="card-heading d-flex justify-content-center">
+                            <p>1</p>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Become an ECOH-Beneficiary</h5>
+                            <p class="card-text">Pay in full for at least one of LFD Services' products and get an ECOH-PIP (Passive Income Paymnet) account created just for you.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+                        <div class="card-heading d-flex justify-content-center">
+                            <p>2</p>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Spread the word and get Rewarded</h5>
+                            <p class="card-text">Invite friends and contacts to try out LFD Services. Earn <strong>35,000 FCFA for every 5 friends</strong> who become full paying customers.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-heading d-flex justify-content-center">
+                            <p>3</p>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Track referrals</h5>
+                            <p class="card-text">To see your referrals and rewards, visit the <strong>Referrals</strong> tab in your account. You can redeem the rewards and apply them to an upcoming payment whenever you feel like!</p>
+                            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                        </div>
+                    </div>
+                </div>
+                <p class="text-center"><small><strong>Invite more friends to get up to $154,710,000 FCFA in your PIP account!</strong> </small> </p>
             </div>
         </div>
         <div class="section" id="ep-rewards" data-title="Rewards">
@@ -239,35 +280,6 @@
                 </div>
             </div>
         </div>
-        <div class="section" id="ep-how-it-works" data-title="How It Works">
-            <h1 class="ep-section-heading">How It Works</h1>
-            <div class="card-deck">
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="section" id="ep-pre-requisites" data-title="Pre-requisites">
             <h1 class="ep-section-heading">Pre-requisites to Enjoy Rewards</h1>
         </div>
@@ -281,6 +293,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <!-- <script src="js/popper.min.js"></script> -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js "></script>
     <!-- js scripts end -->
 </body>
