--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
     <!-- css styles start -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/magaNav/reset.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/magaNav/reset.min.css">
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -166,7 +166,7 @@
             <div class="ep-container">
                 <h1 class="ep-section-heading">How It Works</h1>
                 <div class="card-deck">
-                    <div class="card">
+                    <div class="card card-1">
                         <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
                         <div class="card-heading d-flex justify-content-center">
                             <p>1</p>
@@ -177,7 +177,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-2">
                         <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
                         <div class="card-heading d-flex justify-content-center">
                             <p>2</p>
@@ -187,7 +187,7 @@
                             <p class="card-text">Invite friends and contacts to try out LFD Services. Earn <strong>35,000 FCFA for every 5 friends</strong> who become full paying customers.</p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-3">
                         <div class="card-heading d-flex justify-content-center">
                             <p>3</p>
                         </div>
@@ -202,86 +202,98 @@
             </div>
         </div>
         <div class="section" id="ep-rewards" data-title="Rewards">
-            <h1 class="ep-section-heading">Rewards</h1>
-            <div class="d-flex carousel-nav">
-                <a href="#" class="col active">Associate</a>
-                <a href="#" class="col">Excellent Team Coach (ETC)</a>
-            </div>
-            <div class="owl-carousel owl-1">
-                <div class="item-1 w-100">
-                    <p class="phase-desc">Phase I of the ECOH platform referral program.</p>
-                    <table class="table">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Level</th>
-                                <th scope="col">Number of Referrals</th>
-                                <th scope="col">NBR (Net Renewed Balance) / FCFA</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1st Tier</th>
-                                <td>5</td>
-                                <td>35,000</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2nd Tier</th>
-                                <td>25</td>
-                                <td>225,000</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3rd Tier</th>
-                                <td>125</td>
-                                <td>825,000</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4th Tier</th>
-                                <td>625</td>
-                                <td>5.625,000</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <p class="ep-cnr-text">TOTAL ‘Cumulative Net Reward-(CNR)’ Balance = <span>6,710,000 FCFA</span></p>
+            <div class="ep-container">
+                <h1 class="ep-section-heading">Rewards</h1>
+                <div class="d-flex carousel-nav">
+                    <a href="#0" class="a-1 col active">Phase I : Facilitator</a>
+                    <a href="#0" class="a-2 col">Phase II : Excellent Team Coach (ETC)</a>
                 </div>
+                <div class="owl-carousel owl-1">
+                    <div class="item-1 w-100">
+                        <table class="table">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Level</th>
+                                    <th scope="col">Number of Referrals</th>
+                                    <th scope="col">NBR (Net Renewed Balance) / FCFA</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1st Tier</th>
+                                    <td>5</td>
+                                    <td>35,000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2nd Tier</th>
+                                    <td>25</td>
+                                    <td>225,000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3rd Tier</th>
+                                    <td>125</td>
+                                    <td>825,000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4th Tier</th>
+                                    <td>625</td>
+                                    <td>5.625,000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p class="cd-cnr-text">TOTAL ‘Cumulative Net Reward-(CNR)’ Balance = <span>6,710,000 FCFA</span></p>
+                    </div>
 
-                <div class="item-2 w-100">
-                    <p class="phase-desc">Phase II of the ECOH platform referral program.</p>
-                    <table class="table">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Level</th>
-                                <th scope="col">Pre-requisites</th>
-                                <th scope="col">Deadline</th>
-                                <th scope="col">NBR / FCFA</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Simple</th>
-                                <td>5 TCs with at least 625 new associates each.</td>
-                                <td>10-16 months</td>
-                                <td>13.5 Million</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Super</th>
-                                <td>25 TCs with at least 625 new associates each.</td>
-                                <td>14-20 months</td>
-                                <td>22.5 Million</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Supreme</th>
-                                <td>125 Team Captains, via (5+25) Coaches, to each Attain 625 New Associates!</td>
-                                <td>18-24 months</td>
-                                <td>112.5 Million</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <p class="ep-cnr-text">TOTAL (CNR) Balance = Phase1 CNR (6,710,000 FCFA) + Phase II CNR (148,500,000 FCFA) = <span>154,710,000 FCFA</span></p>
+                    <div class="item-2 w-100">
+                        <table class="table">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Level</th>
+                                    <th scope="col">Pre-requisites</th>
+                                    <th scope="col">Deadline</th>
+                                    <th scope="col">NBR / FCFA</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Simple</th>
+                                    <td>5 TCs with at least 625 new associates each.</td>
+                                    <td>10-16 months</td>
+                                    <td>13.5 Million</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Super</th>
+                                    <td>25 TCs with at least 625 new associates each.</td>
+                                    <td>14-20 months</td>
+                                    <td>22.5 Million</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Supreme</th>
+                                    <td>125 Team Captains, via (5+25) Coaches, to each Attain 625 New Associates!</td>
+                                    <td>18-24 months</td>
+                                    <td>112.5 Million</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p class="cd-cnr-text">TOTAL (CNR) Balance = Phase1 CNR (6,710,000 FCFA) + Phase II CNR (148,500,000 FCFA) = <span>154,710,000 FCFA</span></p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section" id="ep-pre-requisites" data-title="Pre-requisites">
             <h1 class="ep-section-heading">Pre-requisites to Enjoy Rewards</h1>
+            <p>Official Rules Last Updated: January 2022 The following describes the terms of service which apply to participation in the referral or account opening promotional programs (collectively, the “Referral Programs“) currently offered by Social
+                Finance, Inc. (“SoFi“) and its affiliates. If you wish to participate in any Referral Program described below, you agree to the terms for such Referral Program described in Part I below, as well as the General Terms and Conditions in Part
+                II, which apply to all Referral Programs. *Please note that any friend whom you’d like to refer must use your specific product referral link in accordance with the terms and conditions associated with the specific promotional campaign
+                for that link. Note you have separate referral links for (1) Personal Loans and Student Loans, (2) Money, (3) Checking and Savings accounts, (4) Invest products, (5) Credit Card, and (6) referring to the app generally. Only one referral
+                reward and one welcome bonus per new customer. You will not receive multiple referral bonuses for the same friend taking advantage of multiple promotions, nor will your friend receive multiple welcome bonuses for taking advantage of multiple
+                promotions. SoFi mortgages are never eligible for the SoFi Referral Program. Additional terms and conditions apply. Each person referred should be someone you have a direct, personal relationship with. You may not distribute a Referral
+                Link or otherwise solicit anyone through mass email, any form of commercial advertising or other similar means. SoFi reserves the right to review, investigate, and disqualify anyone from participation in the SoFi Referral Program at any
+                time, and reserves the right to not honor any referral which in our sole discretion was solicited in a manner inconsistent with the spirit or terms and conditions of the SoFi Referral Program. Furthermore, SoFi Securities reserves the
+                right to seek reimbursement from any customer (including by deduction from their Invest Account) of amounts paid as Referral Bonuses to customers solicited via mass solicitation. Please note that in certain circumstances the deduction
+                of such amounts from their account may result in a negative balance. Any person referred to a SoFi loan, SoFi Checking or Savings account, or SoFi Credit Card may not have an existing registered SoFi account. A person referred to a SoFi
+                Invest account or SoFi Digital Assets account (for crypto) may have an existing SoFi registered account. If account funding is required to meet referral bonus payout eligibility, P2P transfers or proceeds of a reward, promotion or similar
+                program are not eligible methods of funding. To protect the privacy of those you refer, referral prospect account information or eligibility is not, under any circumstances, permitted to be shared with referral promoters.</p>
         </div>
 
     </main>
@@ -291,8 +303,9 @@
 
     <!-- js scripts start -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <!-- <script src="js/popper.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js "></script>
     <!-- js scripts end -->
