--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <title>Ecoh Platform Referral Program</title>
 
     <!-- Favicon links start -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="./assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Favicon links end -->
 
@@ -35,13 +35,13 @@
     <!-- Inter font link ends -->
 
     <!-- css styles start -->
-    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/magaNav/reset.min.css">
-    <link rel="stylesheet" href="/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/css/animate.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/magaNav/reset.min.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/theme.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <!-- css styles end -->
 
     <script src="https://unpkg.com/feather-icons"></script>
@@ -55,8 +55,8 @@
                 <div class="col-12">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <div class="empty d-md-none"></div>
-                        <a class="navbar-brand d-flex align-items-center" href="/index.html">
-                            <img class="d-none d-lg-inline-flex mr-2" src="/assets/images/logo.png" alt="">
+                        <a class="navbar-brand d-flex align-items-center" href="./index.html">
+                            <img class="d-none d-lg-inline-flex mr-2" src="./assets/images/logo.png" alt="">
                             <span class="d-none d-md-inline-flex">Ecoh Platform</span>
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,10 +68,10 @@
                                     <a class="nav-link" href="#">How it works</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 mr-0 mr-lg-3 pt-0 pt-lg-1">
-                                    <a class="nav-link" href="#">Rewards</a>
+                                    <a class="nav-link" href="#rewards">Rewards</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 mr-0 mr-lg-3 pt-0 pt-lg-1">
-                                    <a class="nav-link" href="#">Terms & conditions</a>
+                                    <a class="nav-link" href="#terms-conditions">Terms & conditions</a>
                                 </li>
                             </ul>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="col-12 col-md-6 col-lg-7 right-card">
                         <div class="hero-img-card mt-0 mt-md-4">
                             <div class="background"></div>
-                            <img src="/assets/images/pexels-lay-low-4605240.png" alt="hero image" class="foreground">
+                            <img src="./assets/images/pexels-lay-low-4605240.png" alt="hero image" class="foreground">
                         </div>
                     </div>
                 </div>
@@ -444,10 +444,9 @@
             <div class="row footer-cta pl-3 pr-3">
                 <div class="pr-lg-4 col-lg-4 col-md-7 mb-50 mb-md-4 p-0">
                     <div class="single-cta">
-                        <!-- <i data-feather="map-pin"></i> -->
                         <div class="cta-text">
                             <h4 class="mb-3">Find Us</h4>
-                            <span class="mt-3">Mvog-Ada Yaounde (behind Express Union - Marche des Poulets)</span>
+                            <span class="mt-3"> <a target="_blank" href="https://goo.gl/maps/bn5rRAfjToa4Yk5JA"><i data-feather="map-pin"></i></a> Mvog-Ada Yaounde (behind Express Union - Marche des Poulets)</span>
                         </div>
                     </div>
                 </div>
@@ -522,12 +521,12 @@
 
 
     <!-- js scripts start -->
-    <script src="/js/jquery-3.6.0.min.js "></script>
-    <script src="/js/bootstrap/bootstrap.min.js "></script>
-    <script src="/js/popper.min.js "></script>
-    <script src="/https://kenwheeler.github.io/slick/slick/slick.js "></script>
-    <script src="/js/owl.carousel.min.js "></script>
-    <script src="/js/script.js "></script>
+    <script src="./js/jquery-3.6.0.min.js "></script>
+    <script src="./js/bootstrap/bootstrap.min.js "></script>
+    <script src="./js/popper.min.js "></script>
+    <script src="./https://kenwheeler.github.io/slick/slick/slick.js "></script>
+    <script src="./js/owl.carousel.min.js "></script>
+    <script src="./js/script.js "></script>
     <!-- js scripts end -->
 </body>
 
